[package]
name = "brioche-ducc-serde"
version = "0.1.2-brioche"
description = "Serde serializer/deserializer implementation for `ducc::Value` (fork)"
authors = ["Skyler Lipthay <sl@skylerlipthay.com>", "Kyle Lacy <kylelacy+git@pm.me>"]
repository = "https://github.com/brioche-dev/ducc"
license = "MIT"

[dependencies]
serde = "1.0"

[dependencies.ducc]
version = "0.1.2-brioche"
package = "brioche-ducc"
path = "../ducc"
