[package]
name = "brioche-ducc"
version = "0.1.2-brioche"
description = "Rust bindings for Duktape, the embedded JavaScript engine (fork)"
authors = ["Skyler Lipthay <sl@skylerlipthay.com>", "Kyle Lacy <kylelacy+git@pm.me>"]
repository = "https://github.com/brioche-dev/ducc"
license = "MIT"

[dependencies]
cesu8 = "1.1"

[dependencies.ducc-sys]
version = "0.1.2-brioche"
package = "brioche-ducc-sys"
path = "../ducc-sys"
features = ["use-exec-timeout-check"]
